...
                                                                <rect key="frame" x="0.0" y="0.0" width="354" height="44"/>
                                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                <constraints>
                                                                    <constraint firstAttribute="height" constant="44" id="Gaa-z0-RAS"/>
                                                                </constraints>
                                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                                <state key="normal" title="登录">
                                                                    <color key="titleColor" name="PrimaryColor"/>
                                                                </state>
                                                                <state key="highlighted">
                                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                </state>
                                                                <connections>
...
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="b6r-qj-2Qm">
                                <rect key="frame" x="20" y="64" width="374" height="219"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入手机号/邮箱" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7fh-HV-Xyw">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="23"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xFb-9R-W7D" userLabel="Divider">
                                        <rect key="frame" x="0.0" y="43" width="374" height="0.5"/>
                                        <color key="backgroundColor" systemColor="systemGroupedBackgroundColor"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="0.5" id="t3g-pt-qpt"/>
                                        </constraints>
                                    </view>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入密码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="irS-Ui-ltT">
                                        <rect key="frame" x="0.0" y="63.5" width="374" height="23"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="41p-4J-G7X">
                                        <rect key="frame" x="0.0" y="106.5" width="374" height="0.5"/>
...
